--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test": "yarn jest --runInBand --watch",
-    "start:dev": "nodemon src/main/api/index.ts"
+    "start:dev": "nodemon src/main/api/index.ts",
+    "ddl:create": "ts-node src/infra/scripts/table.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
